<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijingtu" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/register"
        android:textSize="32sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/enterbutton"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewgpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewmail"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="35dp"
        android:text="@string/nameregister"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewgpa"
        android:layout_alignBottom="@+id/textViewgpa"
        android:layout_alignLeft="@+id/editTextemail"
        android:ems="10"
        android:hint="@string/nameregisterinput"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextemail"
        android:layout_below="@+id/editTextemail"
        android:ems="10"
        android:hint="@string/passwordregisterinput"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textViewmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="20dp"
        android:text="@string/emailregister"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/editText4"
        android:layout_marginLeft="11dp"
        android:ems="10"
        android:hint="@string/emailregisterinput"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextpassword"
        android:layout_alignParentLeft="true"
        android:text="@string/passwordregister"
        android:textColor="#000000"
        android:textSize="25sp" />

</RelativeLayout>