<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijingtu" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/personalacademic"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:text="@string/relax"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="42dp"
        android:text="@string/masterassessbutton" />

    <Button
        android:id="@+id/button_phd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_master"
        android:layout_below="@+id/button_master"
        android:layout_marginTop="26dp"
        android:text="@string/phdassessbutton" />

    <Button
        android:id="@+id/button_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_phd"
        android:layout_below="@+id/button_phd"
        android:layout_marginTop="30dp"
        android:text="@string/lastrank" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/exitbutton"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_exit"
        android:layout_alignBottom="@+id/button_exit"
        android:layout_toRightOf="@+id/button_master"
        android:text="@string/backbutton"
        android:textSize="15sp" />

</RelativeLayout>