<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijingtu" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/personalinformation"
        android:textColor="#000000"
        android:textSize="25sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/title_gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/gpa"
        android:textColor="#000000"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/content_gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_gpa"
        android:layout_toRightOf="@+id/title_gpa"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/title_toefl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_gpa"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/toefl"
        android:textColor="#000000"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/content_toefl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_toefl"
        android:layout_toRightOf="@+id/title_toefl"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/title_ielts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_toefl"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/ielts"
        android:textColor="#000000"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/content_ielts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_ielts"
        android:layout_toRightOf="@+id/title_ielts"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/title_gre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_ielts"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/gre"
        android:textColor="#000000"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/content_gre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_gre"
        android:layout_toRightOf="@+id/title_gre"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/title_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_gre"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/targetcountry"
        android:textColor="#000000"
        android:textSize="23sp" />

    <Spinner
        android:id="@+id/content_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_country"
        android:layout_toRightOf="@+id/title_country" />

    <TextView
        android:id="@+id/title_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_country"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/masterphd"
        android:textColor="#000000"
        android:textSize="23sp" />

    <Spinner
        android:id="@+id/content_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_type"
        android:layout_toRightOf="@+id/title_type" />

    <TextView
        android:id="@+id/title_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_type"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/major"
        android:textColor="#000000"
        android:textSize="23sp" />

    <Spinner
        android:id="@+id/content_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title_major"
        android:layout_toRightOf="@+id/title_major" />

    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/returnbutton"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@+id/button_return"
        android:text="@string/searchbutton"
        android:textSize="13sp" />

</RelativeLayout>