<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijingtu" >

    <Button
        android:id="@+id/button_assess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/assessbutton"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/loginbutton"
        android:textSize="13sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/button_login"
        android:text="@string/registerbutton"
        android:textSize="13sp" />

    <ListView
        android:id="@+id/list_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_assess"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textColor="#000000"
        android:layout_marginLeft="60dp" >
    </ListView>

</RelativeLayout>