<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beijingtu" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/terrain"
        android:textColor="#ffffff"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="15dp"
        android:text="@string/district"
        android:textColor="#ffffff"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="16dp"
        android:text="@string/tourism"
        android:textColor="#ffffff"
        android:textSize="23sp" />

    <Spinner
        android:id="@+id/Spinner01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView3"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/Spinner02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView4"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/Spinner03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/textView5"
        android:textColor="#000000"
        android:textSize="20sp" />

</RelativeLayout>