<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.traversingoceans.MainActivity" >

    <requestFocus android:layout_marginTop="159dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/beijingtu"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/topica"
        android:textColor="#000000"
        android:textSize="40sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:text="@string/topicb"
        android:textColor="#000000"
        android:textSize="40sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_above="@+id/textView8"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="53dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="16dp"
        android:text="Terrain： "
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:typeface="serif"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
      
        android:layout_centerVertical="true"
        android:text="Country： "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView11"
        android:layout_alignTop="@+id/textView11"
        android:layout_toRightOf="@+id/textView1"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:typeface="serif"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
           android:layout_alignBottom="@+id/textView10"
        android:layout_alignTop="@+id/textView10"
        android:layout_toRightOf="@+id/textView1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignTop="@+id/textView9"
        android:layout_toRightOf="@+id/textView1"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:typeface="serif"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="14dp"
        android:text="Rainfall："
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:typeface="serif"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView10"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="21dp"
        android:text="District："
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignTop="@+id/textView8"
     
        android:layout_toRightOf="@+id/textView1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" />

</RelativeLayout>